--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "latest",
+    "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.11.2",
     "primevue": "^3.51.0",
     "vue": "^3.4.21",
