--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@nuxt/eslint": "latest",
     "@pinia/nuxt": "^0.5.1",
+    "@vee-validate/nuxt": "^4.12.8",
     "nuxt": "^3.11.2",
     "primevue": "^3.51.0",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.3.7",
