--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.11.2",
     "primevue": "^3.51.0",
+    "swiper": "^11.1.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
