--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nuxtjs/device": "^3.1.1",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^6.11.4",
+    "@vite-pwa/assets-generator": "^0.2.6",
+    "@vite-pwa/nuxt": "^0.10.5",
     "eslint": "^9.0.0",
     "nuxt-icon": "^0.6.10",
     "nuxt-primevue": "^0.3.1",
