--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "latest",
+    "@nuxt/fonts": "^0.8.0",
     "@nuxtjs/seo": "^2.0.0-rc.21",
     "@pinia/nuxt": "^0.5.1",
     "@vee-validate/nuxt": "^4.12.8",
