--- a/package.json
+++ b/package.json
@@ -12,29 +12,31 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@nuxt/eslint": "latest",
-    "@nuxt/fonts": "^0.8.0",
-    "@nuxtjs/seo": "^2.0.0-rc.21",
-    "@pinia/nuxt": "^0.5.1",
-    "@vee-validate/nuxt": "^4.12.8",
+    "@nuxt/eslint": "^0.6.0",
+    "@nuxt/fonts": "^0.10.0",
+    "@nuxt/icon": "latest",
+    "@nuxtjs/seo": "^2.0.0-rc.23",
+    "@pinia/nuxt": "^0.5.5",
+    "@primevue/themes": "^4.1.0",
     "leaflet": "^1.9.4",
-    "nuxt": "^3.11.2",
-    "primevue": "^3.51.0",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
+    "nuxt": "^3.13.0",
+    "primevue": "^4.1.0",
+    "tailwindcss-primeui": "^0.3.4",
+    "vue": "latest",
+    "vue-router": "latest",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@nuxt/eslint-config": "^0.3.7",
-    "@nuxtjs/device": "^3.1.1",
+    "@iconify-json/ph": "^1.2.1",
+    "@nuxt/eslint-config": "^0.6.0",
+    "@nuxtjs/device": "latest",
     "@nuxtjs/eslint-module": "^4.1.0",
-    "@nuxtjs/tailwindcss": "^6.11.4",
+    "@nuxtjs/tailwindcss": "latest",
+    "@primevue/nuxt-module": "^4.1.0",
     "@vite-pwa/assets-generator": "^0.2.6",
     "@vite-pwa/nuxt": "^0.10.5",
-    "eslint": "^9.0.0",
-    "nuxt-icon": "^0.6.10",
-    "nuxt-primevue": "^0.3.1",
-    "typescript": "^5.4.5",
-    "vue-tsc": "^1"
+    "eslint": "^9.12.0",
+    "typescript": "^5.6.3",
+    "vue-tsc": "^2.1.6"
   }
 }
